<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/home_tab" />
    <item
        android:id="@+id/nav_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/history_tab" />
    <item
        android:id="@+id/nav_control"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/control_tab" />
    <item
        android:id="@+id/nav_files"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/files_tab" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings_tab" />
</menu>